--- a/solution/GraphicalDebugging/release_notes.txt
+++ b/solution/GraphicalDebugging/release_notes.txt
@@ -1,11 +1,3 @@
-version 0.50
-
-additions:
-- support for Visual Studio 2022
-
-breaking changes:
-- dropped support for Visual Studio 2013, 2015, 2017 and 2019
-
 version 0.34
 
 bugfixes:
@@ -335,7 +327,6 @@ bugfixes:
 
 version 0.1
 
-additions:
-- debug visualizers for Boost.Array, Boost.Geometry, Boost.Variant
-- GraphicalWatch
-- GeometryWatch
+Debug visualizers for Boost.Array, Boost.Geometry, Boost.Variant
+GraphicalWatch
+GeometryWatch
